--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "test": "jest --coverage",
     "build": "tsc -p tsconfig-build.json",
     "lint": "eslint",
     "fix": "eslint --fix"
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/gmvbr/monolithic-ts#readme",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "eslint": "^7.32.0",
@@ -26,6 +28,8 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
+    "jest": "^27.2.3",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
   }
 }
