--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "monolithic-ts",
   "version": "1.0.0",
   "private": true,
+  "main": "build/app.js",
   "scripts": {
+    "run": "node build/app.js",
     "test": "jest --coverage",
     "build": "tsc -p tsconfig-build.json",
     "lint": "eslint",
@@ -31,5 +33,9 @@
     "jest": "^27.2.3",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "inversify": "^5.1.1",
+    "reflect-metadata": "^0.1.13"
   }
 }
