--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -1,20 +1,7 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es2018",
-        "rootDir": "./src",
-        "outDir": "build",
-        "types": ["reflect-metadata"],
-        "moduleResolution": "node",
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
-    },
-    "include": [
-        "src/**/*.ts",
-    ],
+    "extends": "tsconfig.json",
     "exclude": [
         "src/**/*.spec.ts",
         "src/**/*.test.ts",
-        "node_modules"
     ]
 }
