--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "target": "es2018",
         "rootDir": "./src",
         "outDir": "build",
-        "types": ["reflect-metadata"],
+        "types": ["reflect-metadata", "node", "jest"],
         "moduleResolution": "node",
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true
