--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "homepage": "https://github.com/gmvbr/monolithic-ts#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest": "^24.4.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "jest": "^27.2.3",
@@ -35,6 +37,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "inversify": "^5.1.1",
     "reflect-metadata": "^0.1.13"
   }
