Remove inversify and reflect-metadata

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,8 @@
         "target": "es2018",
         "rootDir": "./src",
         "outDir": "build",
-        "types": ["reflect-metadata", "node", "jest"],
+        "types": ["node", "jest"],
         "moduleResolution": "node",
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true
     },
     "include": [
         "src/**/*.ts",
