--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "inversify": "^5.1.1",
-    "reflect-metadata": "^0.1.13"
+    "bcrypt": "^5.0.1"
   }
 }
