--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "outDir": "build",
         "types": ["node", "jest"],
         "moduleResolution": "node",
+        "esModuleInterop": true
     },
     "include": [
         "src/**/*.ts",
