--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.0.2",
+    "@types/jsonwebtoken": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "eslint": "^7.32.0",
@@ -37,6 +38,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1"
+    "bcrypt": "^5.0.1",
+    "env-schema": "^3.4.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
