--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "run": "node build/main.js",
     "test": "jest --coverage",
     "build": "tsc -p tsconfig-build.json",
-    "lint": "eslint",
-    "fix": "eslint --fix"
+    "lint": "eslint src/**/*.ts",
+    "fix": "eslint src/**/*.ts --fix"
   },
   "repository": {
     "type": "git",
