--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/pino": "^6.3.11",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "eslint": "^7.32.0",
@@ -42,6 +43,7 @@
     "bcrypt": "^5.0.1",
     "env-schema": "^3.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.1.2"
+    "mongodb": "^4.1.2",
+    "pino": "^6.13.3"
   }
 }
