--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "run": "node build/main.js",
     "test": "jest --coverage",
-    "build": "tsc -p tsconfig-build.json",
+    "build": "ttsc -p tsconfig-build.json",
     "lint": "eslint src/**/*.ts",
     "fix": "eslint src/**/*.ts --fix"
   },
@@ -37,7 +37,9 @@
     "eslint-plugin-promise": "^5.1.0",
     "jest": "^27.2.3",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3"
+    "ttypescript": "^1.5.12",
+    "typescript": "^4.4.3",
+    "typescript-transform-paths": "^3.3.1"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
