--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "env-schema": "^3.4.0",
+    "inversify": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.2",
-    "pino": "^6.13.3"
+    "pino": "^6.13.3",
+    "reflect-metadata": "^0.1.13"
   }
 }
