--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,13 @@
         "outDir": "build",
         "types": [
             "node",
-            "jest"
+            "jest",
+            "reflect-metadata"
         ], 
         "moduleResolution": "node",
         "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "paths": {
             "@infra": [
                 "src/infrastructure/index"
