Update path from shared

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,9 @@
             ],
             "@domain/*": [
                 "src/domain/*"
+            ],
+            "@shared": [
+                "src/shared/index"
             ]
         },
         "plugins": [
