--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "build/main.js",
   "scripts": {
+    "ts-start": "ts-node -C ttypescript src/main.ts",
     "run": "node build/main.js",
     "test": "jest --coverage",
     "build": "ttsc -p tsconfig-build.json",
@@ -37,6 +38,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "jest": "^27.2.3",
     "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
     "ttypescript": "^1.5.12",
     "typescript": "^4.4.3",
     "typescript-transform-paths": "^3.3.1"
