--- a/package.json
+++ b/package.json
@@ -47,10 +47,8 @@
     "bcrypt": "^5.0.1",
     "env-schema": "^3.4.0",
     "fastify": "^3.22.0",
-    "inversify": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.2",
-    "pino": "^6.13.3",
-    "reflect-metadata": "^0.1.13"
+    "pino": "^6.13.3"
   }
 }
